--- a/nanoshell/Cargo.toml
+++ b/nanoshell/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.119", features = ["derive"] }
 serde_bytes = "0.11.5"
+serde_json = "1.0.59"
 log = "0.4.13"
 velcro = "0.5.3"
 lazy_static = "1.4.0"
